Allow RUD on configs
