# apiserver/api.go
@@ -18,8 +18,11 @@ import (
 // The ConfigurationApiRouter implementation should parse necessary information from the http request,
 // pass the data to a ConfigurationApiServicer to perform the required actions, then write the service results to the http response.
 type ConfigurationApiRouter interface {
+	DeleteConfigurationById(http.ResponseWriter, *http.Request)
+	GetConfigurationById(http.ResponseWriter, *http.Request)
 	GetConfigurations(http.ResponseWriter, *http.Request)
 	PostConfiguration(http.ResponseWriter, *http.Request)
+	PutConfigurationById(http.ResponseWriter, *http.Request)
 }
 
 // CustomizationApiRouter defines the required methods for binding the api requests to a responses for the CustomizationApi
@@ -42,8 +45,11 @@ type VersionApiRouter interface {
 // while the service implementation can be ignored with the .openapi-generator-ignore file
 // and updated with the logic required for the API.
 type ConfigurationApiServicer interface {
+	DeleteConfigurationById(context.Context, int64) (ImplResponse, error)
+	GetConfigurationById(context.Context, int64) (ImplResponse, error)
 	GetConfigurations(context.Context) (ImplResponse, error)
 	PostConfiguration(context.Context, Configuration) (ImplResponse, error)
+	PutConfigurationById(context.Context, int64, Configuration) (ImplResponse, error)
 }
 
 // CustomizationApiServicer defines the api actions for the CustomizationApi service
