# openapi.yaml
@@ -77,6 +77,58 @@ paths:
               schema:
                 $ref: "#/components/schemas/Configuration"
 
+  /configs/{config-id}:
+    get:
+      tags:
+        - Configuration
+      summary: Get configuration
+      description: Gets information about the configuration with the given id
+      parameters:
+        - $ref: "#/components/parameters/config-id"
+      operationId: getConfigurationById
+      responses:
+        "200":
+          description: Successfully returned configuration
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Configuration"
+        "400":
+          description: Bad request
+    put:
+      tags:
+        - Configuration
+      summary: Updates a configuration
+      description: Updates a configuration
+      parameters:
+        - $ref: "#/components/parameters/config-id"
+      operationId: putConfigurationById
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Configuration"
+      responses:
+        "200":
+          description: Successfully updated a configuration
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Configuration"
+    delete:
+      tags:
+        - Configuration
+      summary: Deletes a configuration
+      description: Removes information about the configuration with the given id
+      parameters:
+        - $ref: "#/components/parameters/config-id"
+      operationId: deleteConfigurationById
+      responses:
+        "204":
+          description: Successfully deleted configured configuration
+        "400":
+          description: Bad request
+
   /version:
     get:
       summary: Version of the API
@@ -143,6 +195,18 @@ paths:
           description: Template name not found
 
 components:
+  parameters:
+    config-id:
+      name: config-id
+      in: path
+      description: The id of the config
+      example: 4711
+      required: true
+      schema:
+        type: integer
+        format: int64
+        example: 4711
+
   schemas:
     Configuration:
       type: object
